--- a/Grial/Eleos3/Resx/AppResources.resx
+++ b/Grial/Eleos3/Resx/AppResources.resx
@@ -460,7 +460,7 @@
 
     <!-- FORMS  -->
     <data name="PageTitleTabbedLogin" xml:space="preserve">
-        <value>Login / Sign up</value>
+        <value>Login/out, Sign up</value>
     </data>
     <data name="PageTitleFullBackgroundLogin" xml:space="preserve">
         <value>Full Background Login</value>
